# Paruzorus

./: Makefile  docker-compose.override.yml.dev  docker-compose.override.yml.prod  docker-compose.yml
backend/: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  run.py  tox.ini
backend/app/: __init__.py  config.py  routes.py  sockets.py  species.py
backend/app/blueprints/: api.py  client.py
backend/app/namespaces/: quiz.py
backend/src/paruzorus/: app.py
backend/src/paruzorus/controllers/: quiz_controller.py
backend/src/paruzorus/providers/: macaulay.py  provider.py
backend/src/paruzorus/species/: sandpipers.py  warblers.py
backend/src/paruzorus/util/: version.py
backend/src/paruzorus/web/: __init__.py
backend/src/paruzorus/web/api/: __init__.py  quiz.py
certbot/: .gitignore  docker-compose.yml
certbot/nginx/: nginx.conf
frontend/: .env.development  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: API.js  App.js  config.js  index.css
frontend/src/components/: AddTask.js  Button.js  Home.js  QuestionCard.js  Quiz.js  TaskManager.js  Tasks.js
frontend/src/components/taskmanager/: Header.js  Task.js
nginx/: nginx.conf
webserver/: .dockerignore  .env.example  Dockerfile  Pipfile  run.py
webserver/app/: __init__.py  config.py  routes.py  sockets.py  views.py
webserver/app/blueprints/: api.py
